[package]
name = "patisserie"
version = "0.1.0"
description = "Upload files to pastery.net"
authors = ["Barret Rennie <barret@brennie.ca>"]
edition = "2018"
license = "MIT/Apache-2.0"

[dependencies]
failure = "0.1.5"
lazy_static = "1.3.0"
phf = "0.7.24"
structopt = "0.2.15"
url = "1.7.2"

[build_dependencies]
failure = "0.1.5"
phf_codegen = "0.7.24"
